@@ -392,6 +392,16 @@ assert(mdir != NULL);
 	}
     }
 
+    /* Check whether tags of the same number haven't already been defined */
+    for (p = spec->sources; p != NULL; p = p->next) {
+	if ( p->num != num ) continue;
+	if ((tag == RPMTAG_SOURCE && p->flags == RPMFILE_SOURCE) ||
+	    (tag == RPMTAG_PATCH  && p->flags == RPMFILE_PATCH)) {
+		rpmlog(RPMLOG_ERR, _("%s %d defined multiple times\n"), name, num);
+		return RPMRC_FAIL;
+	    }
+    }
+
     /* Create the entry and link it in */
     p = xmalloc(sizeof(*p));
     p->num = num;
